# Garmin_tracker

./: .gitignore  CHANGELOG.md  README.md  activity_page_manager.py  alembic.ini  analyse_json.py  app.py  app_settings.py  garmin_activity_manager.py  garmin_client_handler.py  garmin_client_manager.py  garmin_health_manager.py  main.py  old_main.py  pyproject.toml  requirements.txt  test_activities.py  test_workout.py  training_analysis.py  wsgi.py
data/: Greg_health.json  activities.json  activity_17756388828_details.json  competitions.json  trainings.json
deploy/: deploy_vps.sh  garmin-tracker.env.example  garmin-tracker.service  nginx_mytrainer_location.conf
garmin/: plotting.py
garmin_data/: Adri_activities.json  Adri_health.json  Greg_activities.json  activity_details.json  sleep_2024-12-14.json  spo2_2024-12-14.json  stress_2024-12-14.json  test_activity.py  weight_2024-12-14.json
garmin_tracker/: __init__.py  activity_manager.py  client_manager.py  creds_store.py  db.py  echarts.py  garmin_sync.py  health_manager.py  i18n.py  models.py  repository.py  storage.py  task_manager.py  training_analysis.py  webapp.py
migrations/: env.py
old/: app.py  health_data.json  test.py
static/: activity.css  activity_details.css  activity_tabs.js  common.css  progress.js  style.css  styles.css  tracking.css  training.css
templates/: activity.html  activity_detail.html  activity_template.html  admin.html  base.html  coaching.html  community.html  competition_detail.html  health.html  health_data.html  home.html  index.html  profile.html  tracking.html  training.html  (+1 more)
(+122 files in other folders)
