[project]
name = "garmin-tracker"
version = "0.1.0"
description = "Garmin Connect tracker dashboard + JSON API"
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
  "flask>=2.3",
  "pandas>=2.0",
  "numpy>=1.24",
  "garminconnect>=0.2",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "passlib[argon2]>=1.7.4",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["garmin_tracker*"]
